--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Leonidas Finance: Rebase 2.0 and Profit Generation"
+      content="CheemsX Finance: Rebase 2.0 and Profit Generation"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta itemprop="image" content="%PUBLIC_URL%/banner.png" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Leonidas Finance</title>
+    <title>CheemsX Finance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
